@@ -1,3 +1,6 @@
+2010-12-14  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amidxtaped.pl: Don't crash if same-host doesn't match.
+
 2010-12-12  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Changer/disk.pm: inventory must return the same as
 				       read_label.
